# landslides-db

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  austria_landslide_density.html  austria_landslides_timeslider_points.html  docker-compose.yaml  helper.py  import.py  package.json  pyproject.toml
.github/workflows/: build.yml  deploy.yml  ruff.yml
alembic/: README.md  alembic.md  env.py
alembic/versions/: 0b6d7ef458ee_add_fields_description_and_doi_to_.py  1fc1738312c6_create_lanslide_view.py  216ded47ba65_remove_uniqueconstraint.py  49c41432f3af_split_description_field.py  530103396fa8_uniqueconstraint_for_landslides.py  5854ae4edfbb_baseline.py  69068a354c0e_classification_table_to_replace_.py  846f31a0e6e4_create_landslide_view_for_pg_tileserv.py  e2839191dbbe_remove_unused_polygon_column.py  e67c4c82e1b8_db_table_structure.py  fe8c60478967_remove_nullable_property_of_the_date_.py
data/processed/: GeoSphere.gpkg
data/raw/: geosphere.gpkg  geosphere.meta.json
db-dump/: landslides-db.gpkg
docs/: index.md  quick-start.md
docs/.vitepress/: config.mjs
docs/guide/: config.md  quick-start.md
docs/intro/: about.md  schema.md
docs/introduction/: index.md  schema.md
landslides/: README  env.py
landslides/versions/: 978e582cea19_db_table_structure.py  af2588f8ec48_db_table_structure.py  (+3 more)
scripts/: analysis_plots.py  create_tables.py  export.py  generate_report.py  import.py  models.py  settings.py
src/: constants.py  duplicates.py  import.py  models.py  settings.py  utils.py
(+38 files in other folders)
