[project]
name = "landslides-db"
version = "0.1.0"
description = "Austrian landslide inventory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
db = [
    "geoalchemy2>=0.18.0",
    "sqlalchemy>=2.0.43",
]

[tool.ruff]
line-length = 79
lint.select = [
    "E",
    "W",
    "I",
    "N",
    "F",
    "B",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "ERA",
    "PD",
]
lint.unfixable = ["E501"]
